--- a/gallery.html
+++ b/gallery.html
@@ -64,11 +64,11 @@
                        </div>
                        <div class="col-md-4">
                            <figure class="effect-ravi">
-                               <img src="img/img12.jpg" />
+                               <img src="img/img12.JPG" />
                                <figcaption>
                                    <h2>Vlog <span>Adventure</span></h2>
                                    <p>
-                                       <a href="img/img12.jpg"><i class="fa fa-search"></i></a>
+                                       <a href="img/img12.JPG"><i class="fa fa-search"></i></a>
    
                                    </p>
                                </figcaption>
@@ -76,7 +76,7 @@
                        </div>
                        <div class="col-md-4">
                            <figure class="effect-ravi">
-                               <img src="img/img13.jpg" />
+                               <img src="img/img13.JPG" />
                                <figcaption>
                                    <h2>Vlog <span>Adventure</span></h2>
                                    <p>
@@ -90,7 +90,7 @@
                    <div class="row">
                        <div class="col">
                            <figure class="effect-ravi">
-                               <img src="img/img14.jpg"/>
+                               <img src="img/img14.JPG"/>
                                <figcaption>
                                    <h2>Lightroom <span>Edits</span></h2>
                                    <p>
@@ -102,7 +102,7 @@
                        </div>
                        <div class="col">
                            <figure class="effect-ravi">
-                               <img src="img/img15.jpg" />
+                               <img src="img/img15.JPG" />
                                <figcaption>
                                    <h2>Lightroom <span>Edits</span></h2>
                                    <p>
@@ -116,7 +116,7 @@
                    <div class="row">
                        <div class="col">
                            <figure class="effect-ravi">
-                               <img src="img/img16.jpg"/>
+                               <img src="img/img16.JPG"/>
                                <figcaption>
                                    <h2>Vlog <span>Adventure</span></h2>
                                    <p>
@@ -133,7 +133,7 @@
                    <div class="row">
                        <div class="col-md-4">
                            <figure class="effect-ravi">
-                               <img src="img/img18.jpg"/>
+                               <img src="img/img18.JPG"/>
                                <figcaption>
                                    <h2>Gaming <span>Builds</span></h2>
                                    <p>
@@ -156,7 +156,7 @@
                        </div>
                        <div class="col-md-4">
                            <figure class="effect-ravi">
-                               <img src="img/img20.jpg"/>
+                               <img src="img/img20.JPG"/>
                                <figcaption>
                                    <h2>Just <span>Memes</span></h2>
                                    <p>
