--- a/about.html
+++ b/about.html
@@ -69,7 +69,7 @@
             </div>
           </div>
           
-          <div class="carousel-item" style="background-image: url('img/img11.jpg')">
+          <div class="carousel-item" style="background-image: url(img/img11.jpg)">
             <div class="carousel-caption d-none d-md-block">
               <h3 class="display-4">Vlogs</h3>
               <p class="lead">Adventure awaits.</p>
